--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "prettier": "^2.8.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-markdown": "^8.0.6",
     "react-syntax-highlighter": "^15.5.0",
     "remark": "^14.0.2",
     "remark-gfm": "^3.0.1",
@@ -53,6 +54,7 @@
     "eslint": "^8.28.0",
     "eslint-config-next": "13.0.5",
     "isomorphic-fetch": "^3.0.0",
-    "ts-jest": "^29.0.3"
+    "ts-jest": "^29.0.3",
+    "typescript": "5.0.2"
   }
 }
